# school21-RT

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  Makefile.client  Makefile.server  Pipfile  author  imgui.ini
includes/: actually_defines.h  clear_mlx.h  color.h  defines.h  error.h  figures.h  figures.hpp  filter.h  graceful.h  hsv.h  init_mlx.h  init_rtv.h  init_sdl.h  intersection.h  intersection_common.h  intersection_cone.h  intersection_cylinder.h  intersection_plane.h  intersection_sphere.h  lights.h  lights.hpp  loop_hook.h  main.h  matrix_factory.h  matrix_utils.h  normal.h  parser.h  quaterion.h  quaternion.h  raytrace.h  raytrace_light.h  rtv.h  rtv.hpp  sdl_defines.h  texture.h  typedef_common.h  validator.h  vector.h
libft/: Makefile  array.h  ft_isalpha.c  ft_isascii.c  ft_memccpy.c  ft_memcmp.c  ft_memset.c  ft_print_memory.c  ft_strcmp.c  ft_strdup.c  ft_strequ.c  ft_strlen.c  ft_strncmp.c  ft_strnequ.c  ft_strsplit.c  ft_strtol.c  ft_strtrim.c  ft_tolower.c  get_next_line.c  get_next_line.h  libft.h  ptr_array_add.c  ptr_array_destroy.c  ptr_array_has.c  ptr_array_resize.c
minilibx-linux/: Makefile.gen
minilibx_mms_20200219/: Makefile  interface.swift  mlx.h  mlx_image.swift  mlx_init.swift  mlx_png.c  mlx_string_put.c  mlx_window.swift  mlx_xpm.c
minilibx_mms_20210621/: Makefile  interface.swift
scenes/: ambient_not_present.oadyaml  ambient_zero.oadyaml  ambient_zero_but_point.oadyaml  brightness1_after.oadyaml  brightness1_before.oadyaml  brightness2.oadyaml  camera_random.oadyaml  camera_random_x.oadyaml  camera_random_y.oadyaml  (+14 more)
(+190 files in other folders)
